add placeholders for two experiments

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 // variables
-$lite-page-color: #ccfbf1;
+$lite-page-color: #fffeeb;
 $dark-page-color: #134e4a;
-$lite-link-color: #fffeeb;
+$lite-link-color: #fcfd7d;
 $max-width: 650px;
 
 // styles
